--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
     "@refinedev/mui": "^5.0.0",
     "@refinedev/nextjs-router": "^5.1.4",
     "@refinedev/react-hook-form": "^4.1.2",
+    "@techstark/opencv-js": "^4.7.0-release.1",
     "axios": "^1.4.0",
     "next": "^13.0.6",
     "next-i18next": "^8.9.0",
     "nookies": "^2.5.2",
+    "opencvjs": "^1.0.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-youtube": "^10.1.0",
