--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@refinedev/nextjs-router": "^5.1.4",
     "@refinedev/react-hook-form": "^4.1.2",
     "axios": "^1.4.0",
+    "marked": "^5.1.1",
     "next": "^13.0.6",
     "next-i18next": "^8.9.0",
     "nookies": "^2.5.2",
@@ -36,6 +37,7 @@
     "ytdl-core": "^4.11.4"
   },
   "devDependencies": {
+    "@types/marked": "^5.0.1",
     "@types/node": "^12.20.11",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
