--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "opencvjs": "^1.0.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-router-dom": "^6.14.2",
     "react-youtube": "^10.1.0",
     "uuid": "^9.0.0",
     "ytdl-core": "^4.11.4"
